fix styling errors (overflow)

--- a/src/shared/components/StudyList/styles.module.scss
+++ b/src/shared/components/StudyList/styles.module.scss
@@ -18,8 +18,6 @@ ul.StudyList {
 
   &.Level0 {
     padding: 5px;
-    max-height: 400px;
-    overflow: auto;
 
     > li.CancerType, > li.Study {
       margin-left: 0px;
